--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,10 @@ services:
       context: .
       dockerfile: Dockerfile.development
     ports: ['8080:8080']
+    environment:
+      SMTP_HOST: $SMTP_HOST
+      SMTP_EMAIL: $SMTP_EMAIL
+      SMTP_PASSWORD: $SMTP_PASSWORD
+      SMTP_PORT: $SMTP_PORT
     volumes:
       - ./:/app
