--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: Dockerfile.development
     ports: ['8080:8080']
     environment:
+      SERVER_PORT: $SERVER_PORT
+      SERVER_HOST: $SERVER_HOST
       SMTP_HOST: $SMTP_HOST
       SMTP_EMAIL: $SMTP_EMAIL
       SMTP_PASSWORD: $SMTP_PASSWORD
