--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,6 @@ services:
       SMTP_EMAIL: $SMTP_EMAIL
       SMTP_PASSWORD: $SMTP_PASSWORD
       SMTP_PORT: $SMTP_PORT
+      SENDGRID_API_KEY: $SENDGRID_API_KEY
     volumes:
       - ./:/app
